# web/hosts.go
@@ -12,7 +12,6 @@ import (
 	"github.com/trento-project/trento/internal/consul"
 	"github.com/trento-project/trento/internal/hosts"
 	"github.com/trento-project/trento/internal/sapsystem"
-	"github.com/trento-project/trento/internal/tags"
 )
 
 func NewHostsHealthContainer(hostList hosts.HostList) *HealthContainer {
@@ -152,122 +151,5 @@ func NewHAChecksHandler(client consul.Client) gin.HandlerFunc {
 			"Hostname": host.Name(),
 			"HAChecks": host.HAChecks(),
 		})
-	}
-}
-
-type CreateHostTagHandlerRequest struct {
-	Tag string `json:"tag" binding:"required"`
-}
-
-// CreateHostTagHandler godoc
-// @Summary Add tag to host
-// @Description yabba
-// @Accept json
-// @Produce json
-// @Param name path string true "Host name"
-// @Param Body body CreateHostTagHandlerRequest true "The body to create a tag"
-// @Success 201 {object} map[string]interface{}
-// @Router /api/hosts/{name}/tags [post]
-func CreateHostTagHandler(client consul.Client) gin.HandlerFunc {
-	return func(c *gin.Context) {
-		name := c.Param("name")
-
-		catalogNode, _, err := client.Catalog().Node(name, nil)
-		if err != nil {
-			_ = c.Error(err)
-			return
-		}
-
-		if catalogNode == nil {
-			_ = c.Error(NotFoundError("could not find host"))
-			return
-		}
-
-		var r CreateHostTagHandlerRequest
-
-		err = c.BindJSON(&r)
-		if err != nil {
-			_ = c.Error(UnprocessableEntityError("unable to parse JSON body"))
-			return
-		}
-
-		t := tags.NewTags(client, "hosts", name)
-		t.Create(r.Tag)
-
-		res := map[string]interface{}{
-			"tag": r.Tag,
-		}
-		c.JSON(http.StatusCreated, res)
-	}
-}
-
-// GetHostTagsHandler godoc
-// @Summary Get all tags that belong to a host
-// @Description yabba
-// @Accept json
-// @Produce json
-// @Param name path string true "Host name"
-// @Success 200 {object} map[string]interface{}
-// @Router /api/hosts/{name}/tags [get]
-func GetHostTagsHandler(client consul.Client) gin.HandlerFunc {
-	return func(c *gin.Context) {
-		name := c.Param("name")
-
-		catalogNode, _, err := client.Catalog().Node(name, nil)
-		if err != nil {
-			_ = c.Error(err)
-			return
-		}
-
-		if catalogNode == nil {
-			_ = c.Error(NotFoundError("could not find host"))
-			return
-		}
-
-		t := tags.NewTags(client, "hosts", name)
-		tagsList, err := t.GetAll()
-		if err != nil {
-			_ = c.Error(err)
-			return
-		}
-
-		c.JSON(http.StatusOK, tagsList)
-	}
-}
-
-// DeleteHostTagHandler godoc
-// @Summary Delete a specific tag that belongs to a host
-// @Description yabba
-// @Accept json
-// @Produce json
-// @Param name path string true "Host name"
-// @Param tag path string true "Tag name"
-// @Success 204 {object} map[string]interface{}
-// @Router /api/hosts/{name}/tags/{tag} [delete]
-func DeleteHostTagHandler(client consul.Client) gin.HandlerFunc {
-	return func(c *gin.Context) {
-		name := c.Param("name")
-		tag := c.Param("tag")
-
-		catalogNode, _, err := client.Catalog().Node(name, nil)
-		if err != nil {
-			_ = c.Error(err)
-			return
-		}
-
-		if catalogNode == nil {
-			_ = c.Error(NotFoundError("could not find host"))
-			return
-		}
-
-		t := tags.NewTags(client, "hosts", name)
-		t.Delete(tag)
-
-		if err != nil {
-			_ = c.Error(err)
-			return
-		}
-
-		c.JSON(http.StatusNoContent, nil)
 	}
 }
